# etl-with-duckdb

./: Dockerfile  README.md  app.py  ddl.sql  duckdb.db  pipeline.py  pipeline_02_usando_duckdb_banco.py  pyproject.toml  requirements.txt
