[tool.poetry]
name = "duckdb"
version = "3.12.1"
description = ""
authors = ["lauranonato <laura.mirandamn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
gdown = "^5.1.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
