[tool.poetry]
name = "projeto_com_duckdb"
version = "0.1.0"
description = ""
authors = ["lauranonato <laura.mirandamn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^5.1.0"
duckdb = "^0.10.2"
streamlit = "^1.33.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
